[package]
name = "haddock"
version = "0.2.0"
edition = "2021"
description = "Docker Compose for Podman"
repository = "https://github.com/seowalex/haddock"
license = "GPL-3.0-only"
keywords = ["podman", "compose", "docker", "docker-compose"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.72"
atty = "0.2.14"
automod = "1.0.12"
byte-unit = { version = "4.0.19", default-features = false, features = [
    "serde",
    "std",
] }
clap = { version = "4.3.19", features = ["cargo", "derive"] }
console = "0.15.7"
dotenvy = "0.15.7"
fastrand = "2.0.0"
figment = { version = "0.10.10", features = ["env"] }
futures = "0.3.28"
heck = "0.4.1"
hex = "0.4.3"
humantime = "2.1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
indicatif = "0.17.6"
inquire = "0.6.2"
itertools = "0.11.0"
nom = "7.1.3"
once_cell = "1.18.0"
parse-hyperlinks = "0.23.4"
path-absolutize = { version = "3.1.0", features = ["once_cell_cache"] }
petgraph = "0.6.3"
regex = "1.9.1"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_ignored = "0.1.9"
serde_json = "1.0.104"
serde_with = { version = "3.2.0", features = ["indexmap_2"] }
serde_yaml = "0.9.25"
sha2 = "0.10.7"
shell-words = "1.1.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
temp-env = "0.3.4"
test-generator = "0.3.1"
