[package]
name = "haddock"
version = "0.2.0"
edition = "2021"
description = "Docker Compose for Podman"
repository = "https://github.com/seowalex/haddock"
license = "GPL-3.0-only"
keywords = ["podman", "compose", "docker", "docker-compose"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
automod = "1.0.13"
byte-unit = { version = "5.1.2", features = ["byte", "serde"] }
clap = { version = "4.4.12", features = ["cargo", "derive"] }
console = "0.15.7"
dotenvy = "0.15.7"
fastrand = "2.0.1"
figment = { version = "0.10.13", features = ["env"] }
futures = "0.3.30"
heck = "0.4.1"
hex = "0.4.3"
humantime = "2.1.0"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.7"
inquire = "0.6.2"
itertools = "0.12.0"
nom = "7.1.3"
once_cell = "1.19.0"
parse-hyperlinks = "0.27.2"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
petgraph = "0.6.4"
regex = "1.10.2"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_ignored = "0.1.9"
serde_json = "1.0.109"
serde_with = { version = "3.4.0", features = ["indexmap_2"] }
serde_yaml = "0.9.29"
sha2 = "0.10.8"
shell-words = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
temp-env = "0.3.6"
test-generator = "0.3.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_variant_names = "allow"
large_enum_variant = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
