[package]
name = "haddock"
version = "0.2.1"
edition = "2021"
description = "Docker Compose for Podman"
repository = "https://github.com/seowalex/haddock"
license = "GPL-3.0-only"
keywords = ["podman", "compose", "docker", "docker-compose"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
automod = "1.0.14"
byte-unit = { version = "5.1.4", features = ["byte", "serde"] }
clap = { version = "4.5.2", features = ["cargo", "derive"] }
console = "0.15.8"
dotenvy = "0.15.7"
fastrand = "2.0.1"
figment = { version = "0.10.14", features = ["env"] }
futures = "0.3.30"
heck = "0.4.1"
hex = "0.4.3"
humantime = "2.1.0"
indexmap = { version = "2.2.5", features = ["serde"] }
indicatif = "0.17.8"
inquire = "0.7.0"
itertools = "0.12.1"
nom = "7.1.3"
once_cell = "1.19.0"
parse-hyperlinks = "0.27.2"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
petgraph = "0.6.4"
regex = "1.10.3"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = "1.0.114"
serde_with = { version = "3.6.1", features = ["indexmap_2"] }
serde_yaml = "0.9.32"
sha2 = "0.10.8"
shell-words = "1.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "sync"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
temp-env = "0.3.6"
test-generator = "0.3.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_variant_names = "allow"
large_enum_variant = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
